--- a/USQ Assignment template.tex
+++ b/USQ Assignment template.tex
@@ -11,15 +11,7 @@
 \graphicspath{ {images/} } 						% Set the path where images are stored.
 
 % Personal settings
-\newcommand{\usqcoursecode}{MAT8190}
-\newcommand{\usqcoursedescription}{Numerical Computation}
-\title{Assignment 1}
-\author{Geoffry Breemer}
-\newcommand{\usqstudentnumber}{0061082147}
-\newcommand{\usqstudentemail}{u1082147@umail.usq.edu.au}
-\newcommand{\usqacademicyear}{2016}
-\newcommand{\usqacademicsemester}{2}
-\date{31 July 2016}
+\input{settings/personal-settings}
 
 % Start of the document
 \begin{document}
