Added two packages

--- a/USQ Assignment template.tex
+++ b/USQ Assignment template.tex
@@ -5,6 +5,9 @@
 \usepackage{hyperref}						% clickable references
 \usepackage{lastpage}						% to determine the number of pages
 \usepackage{graphicx}
+\usepackage{wrapfig}
+\usepackage{mathtools}
+\usepackage{nameref}						% to refer to names
 
 % Document settings
 \input{settings/page-settings}					% Page settings (header, footer etc.)
