Move page numbers to separate .tex

--- a/settings/page-settings.tex
+++ b/settings/page-settings.tex
@@ -4,5 +4,5 @@
 \fancyhf{}
 \fancyhead[L]{\leftmark}
 \fancyhead[R]{\@title}
-\fancyfoot[R]{\thepage\ of \pageref{LastPage}}
+\input{settings/pagenumber-settings}
 \makeatother
