Created page style for the title page to suppress the header but still show the page number.

--- a/other/title-page.tex
+++ b/other/title-page.tex
@@ -1,8 +1,7 @@
-\thispagestyle{empty}
+\thispagestyle{plain}
 \newcommand{\horrule}[1]{\rule{\linewidth}{#1}} 	% create horizontal rule command with 1 argument of height
 \makeatletter 								% allows access to \@title and \@author
 \begin{center}
-\horrule{0.5pt} \\[0.2cm]
 \huge
 \textbf{\usqcoursecode{} \usqcoursedescription{}}
 
