Added code style and misc/code-styles.tex

--- a/USQ Assignment template.tex
+++ b/USQ Assignment template.tex
@@ -7,11 +7,15 @@
 \usepackage{graphicx}
 \usepackage{wrapfig}
 \usepackage{mathtools}
+\usepackage{bigints}							% for bigger integral symbols
+\usepackage{textcomp}						% for \textdegree
 \usepackage{nameref}						% to refer to names
+\usepackage{listings}						% for including code listings
 
 % Document settings
-\input{settings/page-settings}					% Page settings (header, footer etc.)
-\graphicspath{ {images/} } 						% Set the path where images are stored.
+\input{settings/page-settings}					% page settings (header, footer etc.)
+\graphicspath{ {images/} } 						% set the path where images are stored.
+\input{misc/code-styles}						% styles for source code
 
 % Personal settings
 \input{settings/personal-settings}
