Added blind text and adjusted mathtools

--- a/USQ Assignment template.tex
+++ b/USQ Assignment template.tex
@@ -4,10 +4,11 @@
 \usepackage{fancyhdr} 						% custom headers and footers
 \usepackage{hyperref}						% clickable references
 \usepackage{lastpage}						% to determine the number of pages
+\usepackage{blindtext}						% used for placeholder "lorum ipsum" text
 \usepackage{graphicx}
 \usepackage{wrapfig}
-\usepackage{mathtools}
 \usepackage{bigints}							% for bigger integral symbols
+\usepackage[intlimits]{mathtools}				% integral limits go above and below the symbol
 \usepackage{textcomp}						% for \textdegree
 \usepackage{nameref}						% to refer to names
 \usepackage{listings}						% for including code listings
