--- a/USQ Assignment template.tex
+++ b/USQ Assignment template.tex
@@ -12,10 +12,13 @@
 \usepackage{textcomp}						% for \textdegree
 \usepackage{nameref}						% to refer to names
 \usepackage{listings}						% for including code listings
+\usepackage[font=small,format=plain,labelsep=period, labelfont=bf, justification = centerlast]{caption}
+\usepackage{floatrow}
 
 % Document settings
 \input{settings/page-settings}					% page settings (header, footer etc.)
 \graphicspath{ {images/} } 						% set the path where images are stored.
+\input{misc/listing-references}					% correct listing \autoref
 \input{misc/code-styles}						% styles for source code
 
 % Personal settings
