Added an alternative title page that takes up the entire first page.

--- a/USQ Assignment template.tex
+++ b/USQ Assignment template.tex
@@ -27,7 +27,8 @@
 % Start of the document
 \begin{document}
 
-\input{other/title-page}
+\input{other/title-page}						% Brief title page taking up a third of the page
+%\input{other/title-page-alt}					% Title page taking up the entire page
 \input{content/question1}
 \input{content/question2}
 
