--- a/settings/personal-settings.tex
+++ b/settings/personal-settings.tex
@@ -7,3 +7,6 @@
 \newcommand{\usqacademicyear}{2016}
 \newcommand{\usqacademicsemester}{2}
 \date{31 July 2016}
+\newcommand{\usqpreparedfor}{Dr Harry Butler}
+\newcommand{\usqpreparedforposition}{Senior Lecturer (Mathematics and Computing)}
+\newcommand{\usqpreparedfororganisation}{School of Agricultural, Computational and Environmental}
