feat: added packages, anonymised
Added multirow (merge table rows) and amsmath (enhanced formulas), anonymised template

--- a/USQ Assignment template.tex
+++ b/USQ Assignment template.tex
@@ -17,6 +17,8 @@
 \usepackage{rotating}						% rotate large tables
 \usepackage[titletoc]{appendix}					% show "Appendix" in the TOC
 \usepackage{amssymb}						% symbols
+\usepackage{amsmath}
+\usepackage{multirow}					         % To combine table rows
 
 % Document settings
 \input{settings/page-settings}					% page settings (header, footer etc.)
