--- a/settings/personal-settings.tex
+++ b/settings/personal-settings.tex
@@ -1,13 +1,13 @@
 \newcommand{\usqcoursecode}{MAT8190}
 \newcommand{\usqcoursedescription}{Numerical Computation}
 \title{Assignment 1}
-\author{Geoffry Breemer}
-\newcommand{\usqstudentnumber}{0061082147}
-\newcommand{\usqstudentemail}{u1082147@umail.usq.edu.au}
+\author{First Last}
+\newcommand{\usqstudentnumber}{123456789}
+\newcommand{\usqstudentemail}{a@b.c}
 \newcommand{\usqacademicyear}{2016}
 \newcommand{\usqacademicsemester}{2}
 \date{31 July 2016}
-\newcommand{\usqpreparedfor}{Dr Harry Butler}
+\newcommand{\usqpreparedfor}{Dr A B}
 \newcommand{\usqpreparedforposition}{Senior Lecturer (Mathematics and Computing)}
 \newcommand{\usqpreparedfororganisation}{School of Agricultural, Computational and Environmental}
 \makeatletter
