Feat: Added enumitem package
Enables changing the enumerate style

--- a/USQ Assignment template.tex
+++ b/USQ Assignment template.tex
@@ -19,6 +19,7 @@
 \usepackage{amssymb}						% symbols
 \usepackage{amsmath}
 \usepackage{multirow}					         % To combine table rows
+\usepackage{enumitem}						% change enumerate numerals
 
 % Document settings
 \input{settings/page-settings}					% page settings (header, footer etc.)
