--- a/USQ Assignment template.tex
+++ b/USQ Assignment template.tex
@@ -20,6 +20,7 @@
 \usepackage{amsmath}
 \usepackage{multirow}					         % To combine table rows
 \usepackage{enumitem}						% change enumerate numerals
+\usepackage{bm}							% for bold math symbols
 
 % Document settings
 \input{settings/page-settings}					% page settings (header, footer etc.)
